fix: fix gap between name and contact fiels

--- a/src/components/cv-header/cv-header.module.scss
+++ b/src/components/cv-header/cv-header.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   width: 100%;
   background-color: #0e374e;
+  gap: 15px;
 
   .name-field {
     color: white;
@@ -21,6 +22,7 @@
     flex-direction: row;
     gap: 20px;
     color: white;
+    flex-wrap: wrap;
     .mail {
       gap: 5px;
       display: flex;
